@@ -1,3 +1,7 @@
+h1. 0.1.0 - 2010-10-04
+
+* Added the ability to execute SQL Server Command Statements.
+
 h1. 0.0.2 - 2010-04-22
 
 * Fixed the homepage for the gem.
